@@ -177,7 +177,7 @@ using StringList  = std::vector<std::string>;
 using ObjectSet   = std::set<rptr<Elf>>;
 using StringSet   = std::set<std::string>;
 
-void fixpath(std::string& path);
+void fixpathlist(std::string& pathlist);
 
 class DB {
 public:
